--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,6 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%; // Fix Safari bug where footer is visible over content
+  overflow: hidden;
 }
 
 a {
